--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "clock.cpp" "pwm.cpp"
-                    INCLUDE_DIRS ".")
+idf_component_register(
+  SRCS "main.cpp" "pwm.cpp" "wifi.cpp" "setup.cpp" "ntp.cpp"
+  INCLUDE_DIRS "."
+)
